AI Upscaling basic object

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -89,35 +89,26 @@
 				    <li class="nav-item section-title"><a class="nav-link scrollto active" href="#section-intro"><span class="theme-icon-holder mr-2"><i class="fas fa-map-signs"></i></span>Introduction</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-installation">Installation</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-available-filters">Available Filters</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-background"><span class="theme-icon-holder mr-2"><i class="fas fa-file-code"></i></span>Background Filters</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-loading">Installation</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-background"><span class="theme-icon-holder mr-2"><i class="fas fa-file-code"></i></span>Background Filters (Web)</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-loading">Loading</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-basic-usage">Basic Usage</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-integration">Integration</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-events">Events</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-controls">Controls</a></li>
 
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-upscaling"><span class="theme-icon-holder mr-2"><i class="fas fa-laptop-code"></i></span>AI Upscaling</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-usage">Basic usage</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-plugins">Plugins</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-electron">Electron</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-performance">Performance</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-events">Events</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-controls">Controls</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-styling">Styling and Scaling</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-ai-models">AI Models</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#item-3-low-level">Low level controls</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder mr-2"><i class="fas fa-tablet-alt"></i></span>Mobile</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-upscaling"><span class="theme-icon-holder mr-2"><i class="fas fa-laptop-code"></i></span>AI Upscaling (Web)</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-loading">Loading</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-usage">Basic usage</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-integration">Integration</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-ott">HTML5 Players</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-events">Events</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-controls">Controls</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-styling">Styling and Scaling</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-models">AI Models</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-low-level">Low level controls</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder mr-2"><i class="fas fa-tablet-alt"></i></span>AI Upscaling (Mobile)</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Android</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">iOS</a></li>
-					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-conferencing"><span class="theme-icon-holder mr-2"><i class="fas fa-phone-alt"></i></span>Video Conferencing</a></li>
-
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-webrtc">WebRTC</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-jitsi">Jitsi</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-agora">Agora</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-twilio">Twilio</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-vonage">Vonage / OpenTok</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#conferencing-daily">Daily.co</a></li>
-
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder mr-2"><i class="fas fa-file-video"></i></span>Demos</a></li>
 				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder mr-2"><i class="fas fa-chart-bar"></i></span>Benchmarks</a></li>
 				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-1">Framerate</a></li>
@@ -467,13 +458,37 @@
 				    <header class="docs-header">
 					    <h1 class="docs-heading">AI Upscaling</h1>
 
+						<h4 class="section-heading"  id="item-upscale-loading">Loading</h4>
+
+						<p>The basic API for loading the background filter via NPM is:
+							<code><pre>
+
+     import UpscaleFilter from @vectorly-io/ai-filters;
+					</pre></code>
+
+						</p>
+
+
+						<p>For loading via CDN, you can access the background filter from the <code>vectorly</code> object
+
+
+							<code><pre>
+
+     const UpscaleFilter = vectorly.UpscaleFilter;
+					</pre></code>
+
+
+
+
+
+
 						    <p>For web environments, we've packaged our upscaler as a standalone Javascript library, as well as as plugins to several popular HTML5 video players (see the <a href="https://cdn.vectorly.io/upscaler/docs/latest/">full API</a> for more detail).</p>
 					</header>
 
-						<h4 class="section-heading" id="item-3-usage">Basic usage</h4>
+						<h4 class="section-heading" id="item-upscale-usage">Basic usage</h4>
 
 
-						 <p>For the <code>vectorly-upscaler.js</code> library, the basic API involves instantiating a <code>vectorlyUpscaler</code> object, and specifying a <code>video</code> element.</p>
+						 <p>For the <code>UpscaleFilter</code>, the basic API involves instantiating an <code>UpscaleFilter</code> object, and specifying a <code>video</code> element.</p>
 
 
 
@@ -485,7 +500,7 @@
 	   token: '...'
    };
 
-   const upscaler = new vectorlyUpscaler(video, config);
+   const upscaler = new UpscaleFilter(video, config);
 							 </code>
 						 </pre>
 
