--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -510,6 +510,170 @@
 
 
 
+					<section class="docs-section" id="item-upscale-integration">
+
+
+						<h4 class="section-heading">Integration</h4>
+
+						<p ><b>General WebRTC</b></p>
+
+
+							<p>The <code>vectorlyUpscaler</code> object works with any video tag, so for a WebRTC application, all you need to do is to instantiate the upscaler object with the <code>video</code> element you want to upscale.</p>
+
+
+							<pre><code>
+   const upscaler  = new vectorlyUpscaler(document.getElementById("remoteVideo"), {token: 'insert-vectorly-token-here'});
+
+</code></pre>
+
+							<p>We have an <a href="https://github.com/Vectorly/webrtc-demo"> example repository</a>, showing how Vectorly can be integrated with WebRTC, as well as a full working general WebRTC demo <a href="https://files.vectorly.io/demo/webrtc/index.html">here.</a> </p>
+
+
+							<p>
+								Integrating the upscaler with any specific Video Conferencing API or service just requires finding the video element associated with video stream you want to upscale.
+							</p>
+
+
+						<p ><b>Jitsi</b></p>
+
+							<p>You can enable upscaling on any <code>VideoTrack</code> object by intercepting the corresponding <code>video</code> element you attach it to (see <a href="https://jitsi.github.io/handbook/docs/dev-guide/dev-guide-ljm-api#jitsitrack">reference</a>).
+
+
+							<pre><code>
+   const room = connection.initJitsiConference('conference', confOptions);
+   room.on(JitsiMeetJS.events.conference.TRACK_ADDED, function(track){
+
+      const videoElement = document.createElement('video');
+      document.body.appendChild(videoElement);
+      track.attach(videoElement);
+
+      const upscaler = new vectorlyUpscaler(videoElement.current, {token: 'insert-vectorly-token'});
+
+   });
+</code></pre>
+
+
+						<p ><b>Agora</b></p>
+
+
+							<p>For Web deployments using <a href="https://www.agora.io">Agora</a>, you can find the <code>video</code> element of the stream you want to upscale by using the stream's ID.</p>
+
+							<p>
+							<pre><code>
+    let stream = AgoraRTC.createStream({
+        streamID: uid,
+        audio: true,
+        video: true,
+        screen: false
+    });
+
+    stream.init(function() {
+
+        stream.play('target-div');
+        const video = document.getElementById("video" + stream.getId());
+        const upscaler = new vectorlyUpscaler(video, {token: 'insert-vectorly-token-here'});
+
+        client.publish(stream, handleFail);
+
+    },handleFail);
+						</code></pre>
+							</p>
+
+
+						<p ><b>Twilio</b></p>
+
+							<p>You can enable upscaling on any <code>VideoTrack</code> object by intercepting the corresponding <code>video</code> element you attach it to (see <a href="https://media.twiliocdn.com/sdk/js/video/releases/2.13.1/docs/VideoTrack.html#attach">reference</a>).
+
+
+
+							<p>If you use the <code>track.attach()</code> method to create a <code>video</code> element:</p>
+
+
+							<pre><code>
+   const Video = require('twilio-video');
+
+   Video.createLocalVideoTrack().then(function(videoTrack) {
+     const videoElement = videoTrack.attach();
+     document.body.appendChild(videoElement);
+     const upscaler = new vectorlyUpscaler(videoElement.current, {token: 'insert-vectorly-token'});
+   });
+							</code></pre>
+
+
+
+							<p>If you specify your own <code>video</code> element:</p>
+
+
+							<pre><code>
+   const Video = require('twilio-video');
+
+   const videoElement = document.createElement('video');
+   document.body.appendChild(videoElement);
+
+   Video.createLocalVideoTrack().then(function(videoTrack) {
+     videoTrack.attach(videoElement);
+     const upscaler = new vectorlyUpscaler(videoEl.current, {token: 'insert-vectorly-token'});
+   });
+							</code></pre>
+
+
+
+						<p ><b>OpenTok / Vonage</b></p>
+
+							<p>When a <code>Subscriber</code> or <code>Publisher</code> creates a <code>video</code> element you can intercept it and feed that video to the Vectorly Upscaler.
+
+
+
+							<p>You can use the <code>subscriber.element</code> property to intercept the video element</p>
+
+
+							<pre><code>
+    session.on('streamCreated', function(event) {
+
+        const subscriber = session.subscribe(event.stream, 'subscriber', {
+            insertMode: 'append',
+            width: '100%',
+            height: '100%'
+        }, handleError);
+
+        subscriber.on('videoElementCreated', function (){
+            const video = subscriber.element.querySelector('video');
+            const upscaler  = new vectorlyUpscaler(video, {token: '..your-token....'});
+
+        });
+
+    });
+							</code></pre>
+
+
+							<p>This also works with a publisher object. Refer to the <a href="https://tokbox.com/developer/guides/customize-ui/js/">Vonage documentation</a>  for styling - Vectorly's upscaler will fit within the styling defined by OpenTok.</p>
+
+							<p>See our example repistory for a <a href="https://github.com/Vectorly/ai-upscaler-examples/tree/master/vonage-demo"> working code example </a></p>
+
+						<p ><b>Daily.co</b></p>
+							<p>You can integrate Vectorly's AI upscaler with <a href="daily.co">Daily.co</a> if you're building a custom <a href="https://docs.daily.co/docs/build-a-custom-video-chat-interface">custom video chat interface </a>. Using the default React code sample from Daily, we've built a full working <a href="https://github.com/Vectorly/daily-call-object/">demo reference</a> </p>
+
+
+							<pre><code>
+   useEffect(() => {
+	videoEl.current &&
+	(videoEl.current.srcObject = new MediaStream([videoTrack]));
+	if (videoEl.current && props.isLarge) {
+	window.upscalers = window.upscalers || {}
+	window.upscalers[videoTrack.id] = new vectorlyUpscaler(videoEl.current, {token: 'insert-vectorly-token'});
+	}
+   }, [videoTrack]);
+							</code></pre>
+
+							<p>You just need to make sure you intercept the <code>video</code> element associated with the video track you want to upscale.</p>
+
+							<p>Vectorly's API upscaler is not compatible with the pre-built UI from Daily.co, as the pre-built UI is loaded via iframe, making it impossible to access the <code>video</code> element through a third party application.</p>
+
+
+
+
+					</section>
+
 						<h4 class="section-heading" id="item-upscale-ott">Plugins</h4>
 						Besides the <code>UpscaleFilter</code> module, we have several plugins for specific HTML5 players. (see the <a href="https://cdn.vectorly.io/upscaler/docs/latest/">full API</a> for more detail).
 
@@ -877,178 +1041,6 @@ canvas.style.height = desiredheight + "px";
 						</section><!--//docs-intro-->
 
 
-						<section class="docs-section" id="conferencing-webrtc">
-							<h2 class="section-heading">General WebRTC</h2>
-
-
-							<p>The <code>vectorlyUpscaler</code> object works with any video tag, so for a WebRTC application, all you need to do is to instantiate the upscaler object with the <code>video</code> element you want to upscale.</p>
-
-
-							<pre><code>
-   const upscaler  = new vectorlyUpscaler(document.getElementById("remoteVideo"), {token: 'insert-vectorly-token-here'});
-
-</code></pre>
-
-							<p>We have an <a href="https://github.com/Vectorly/webrtc-demo"> example repository</a>, showing how Vectorly can be integrated with WebRTC, as well as a full working general WebRTC demo <a href="https://files.vectorly.io/demo/webrtc/index.html">here.</a> </p>
-
-
-<p>
-	Integrating the upscaler with any specific Video Conferencing API or service just requires finding the video element associated with video stream you want to upscale.
-</p>
-
-
-
-						</section><!--//section-->
-
-						<section class="docs-section" id="conferencing-jitsi">
-							<h2 class="section-heading">Jitsi</h2>
-
-							<p>You can enable upscaling on any <code>VideoTrack</code> object by intercepting the corresponding <code>video</code> element you attach it to (see <a href="https://jitsi.github.io/handbook/docs/dev-guide/dev-guide-ljm-api#jitsitrack">reference</a>).
-
-
-<pre><code>
-   const room = connection.initJitsiConference('conference', confOptions);
-   room.on(JitsiMeetJS.events.conference.TRACK_ADDED, function(track){
-
-      const videoElement = document.createElement('video');
-      document.body.appendChild(videoElement);
-      track.attach(videoElement);
-
-      const upscaler = new vectorlyUpscaler(videoElement.current, {token: 'insert-vectorly-token'});
-
-   });
-</code></pre>
-
-
-						</section><!--//section-->
-
-
-						<section class="docs-section" id="conferencing-agora">
-							<h2 class="section-heading">Agora</h2>
-
-
-							<p>For Web deployments using <a href="https://www.agora.io">Agora</a>, you can find the <code>video</code> element of the stream you want to upscale by using the stream's ID.</p>
-
-							<p>
-								<pre><code>
-    let stream = AgoraRTC.createStream({
-        streamID: uid,
-        audio: true,
-        video: true,
-        screen: false
-    });
-
-    stream.init(function() {
-
-        stream.play('target-div');
-        const video = document.getElementById("video" + stream.getId());
-        const upscaler = new vectorlyUpscaler(video, {token: 'insert-vectorly-token-here'});
-
-        client.publish(stream, handleFail);
-
-    },handleFail);
-						</code></pre>
-							</p>
-
-						</section><!--//section-->
-
-						<section class="docs-section" id="conferencing-twilio">
-							<h2 class="section-heading">Twilio</h2>
-
-							<p>You can enable upscaling on any <code>VideoTrack</code> object by intercepting the corresponding <code>video</code> element you attach it to (see <a href="https://media.twiliocdn.com/sdk/js/video/releases/2.13.1/docs/VideoTrack.html#attach">reference</a>).
-
-
-
-								<p>If you use the <code>track.attach()</code> method to create a <code>video</code> element:</p>
-
-
-							<pre><code>
-   const Video = require('twilio-video');
-
-   Video.createLocalVideoTrack().then(function(videoTrack) {
-     const videoElement = videoTrack.attach();
-     document.body.appendChild(videoElement);
-     const upscaler = new vectorlyUpscaler(videoElement.current, {token: 'insert-vectorly-token'});
-   });
-							</code></pre>
-
-
-
-<p>If you specify your own <code>video</code> element:</p>
-
-
-							<pre><code>
-   const Video = require('twilio-video');
-
-   const videoElement = document.createElement('video');
-   document.body.appendChild(videoElement);
-
-   Video.createLocalVideoTrack().then(function(videoTrack) {
-     videoTrack.attach(videoElement);
-     const upscaler = new vectorlyUpscaler(videoEl.current, {token: 'insert-vectorly-token'});
-   });
-							</code></pre>
-
-
-						</section><!--//section-->
-
-
-						<section class="docs-section" id="conferencing-vonage">
-							<h2 class="section-heading">Vonage / Open Tok</h2>
-
-							<p>When a <code>Subscriber</code> or <code>Publisher</code> creates a <code>video</code> element you can intercept it and feed that video to the Vectorly Upscaler.
-
-
-
-							<p>You can use the <code>subscriber.element</code> property to intercept the video element</p>
-
-
-							<pre><code>
-    session.on('streamCreated', function(event) {
-
-        const subscriber = session.subscribe(event.stream, 'subscriber', {
-            insertMode: 'append',
-            width: '100%',
-            height: '100%'
-        }, handleError);
-
-        subscriber.on('videoElementCreated', function (){
-            const video = subscriber.element.querySelector('video');
-            const upscaler  = new vectorlyUpscaler(video, {token: '..your-token....'});
-
-        });
-
-    });
-							</code></pre>
-
-
-							<p>This also works with a publisher object. Refer to the <a href="https://tokbox.com/developer/guides/customize-ui/js/">Vonage documentation</a>  for styling - Vectorly's upscaler will fit within the styling defined by OpenTok.</p>
-
-							<p>See our example repistory for a <a href="https://github.com/Vectorly/ai-upscaler-examples/tree/master/vonage-demo"> working code example </a></p>
-						</section><!--//section-->
-
-						<section class="docs-section" id="conferencing-daily">
-							<h2 class="section-heading">Daily.co</h2>
-							<p>You can integrate Vectorly's AI upscaler with <a href="daily.co">Daily.co</a> if you're building a custom <a href="https://docs.daily.co/docs/build-a-custom-video-chat-interface">custom video chat interface </a>. Using the default React code sample from Daily, we've built a full working <a href="https://github.com/Vectorly/daily-call-object/">demo reference</a> </p>
-
-
-							<pre><code>
-   useEffect(() => {
-	videoEl.current &&
-	(videoEl.current.srcObject = new MediaStream([videoTrack]));
-	if (videoEl.current && props.isLarge) {
-	window.upscalers = window.upscalers || {}
-	window.upscalers[videoTrack.id] = new vectorlyUpscaler(videoEl.current, {token: 'insert-vectorly-token'});
-	}
-   }, [videoTrack]);
-							</code></pre>
-
-							<p>You just need to make sure you intercept the <code>video</code> element associated with the video track you want to upscale.</p>
-
-							<p>Vectorly's API upscaler is not compatible with the pre-built UI from Daily.co, as the pre-built UI is loaded via iframe, making it impossible to access the <code>video</code> element through a third party application.</p>
-
-
-						</section><!--//section-->
 
 
 					</header>
