--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -106,13 +106,13 @@
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-styling">Styling and Scaling</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-models">AI Models</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-low-level">Low level controls</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-4"><span class="theme-icon-holder mr-2"><i class="fas fa-tablet-alt"></i></span>AI Upscaling (Mobile)</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-1">Android</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-4-2">iOS</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-5"><span class="theme-icon-holder mr-2"><i class="fas fa-file-video"></i></span>Demos</a></li>
-				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-6"><span class="theme-icon-holder mr-2"><i class="fas fa-chart-bar"></i></span>Benchmarks</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-1">Framerate</a></li>
-				    <li class="nav-item"><a class="nav-link scrollto" href="#item-6-2">Quality</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-upscale-mobile"><span class="theme-icon-holder mr-2"><i class="fas fa-tablet-alt"></i></span>AI Upscaling (Mobile)</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-android">Android</a></li>
+				    <li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-ios">iOS</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-demos"><span class="theme-icon-holder mr-2"><i class="fas fa-file-video"></i></span>Demos</a></li>
+				    <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-performance"><span class="theme-icon-holder mr-2"><i class="fas fa-chart-bar"></i></span>Performance</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-background-performance">Background</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#item-upscale-performance">Upscaling</a></li>
 			    </ul>
 
 		    </nav><!--//docs-nav-->
@@ -949,11 +949,11 @@ canvas.style.height = desiredheight + "px";
 
 				</article><!--//docs-article-->
 
-			    <article class="docs-article" id="section-4">
+			    <article class="docs-article" id="section-upscale-mobile">
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Mobile</h1>
 				    </header>
-				     <section class="docs-section" id="item-4-1">
+				     <section class="docs-section" id="item-upscale-android">
 						<h2 class="section-heading">Android</h2>
 
 
@@ -1029,26 +1029,14 @@ canvas.style.height = desiredheight + "px";
 
 					</section><!--//section-->
 
-					<section class="docs-section" id="item-4-2">
+					<section class="docs-section" id="item-upscale-ios">
 						<h2 class="section-heading">iOS</h2>
 						<p>We plant to release an iOS SDK in Summer 2021</p>
 					</section><!--//section-->
 			    </article><!--//docs-article-->
 
-				<article class="docs-article" id="section-conferencing">
-					<header class="docs-header">
-						<h1 class="docs-heading">Video Conferencing</h1>
-						<section class="docs-intro">
-							<p>You can also use Vectorly's AI Upscaler for upscaling video streams in any WebRTC video conferencing system.</p>
-						</section><!--//docs-intro-->
 
-
-
-
-					</header>
-				</article><!--//docs-article-->
-
-			    <article class="docs-article" id="section-5">
+			    <article class="docs-article" id="section-demos">
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Demos</h1>
 					    <section class="docs-intro">
@@ -1071,7 +1059,7 @@ canvas.style.height = desiredheight + "px";
 			    </article><!--//docs-article-->
 
 
-		        <article class="docs-article" id="section-6">
+		        <article class="docs-article" id="section-performance">
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Benchmarks</h1>
 					    <section class="docs-intro">
