Fixed demos section

--- a/src/docs-page.html
+++ b/src/docs-page.html
@@ -1026,8 +1026,13 @@ canvas.style.height = desiredheight + "px";
 			    <article class="docs-article" id="section-demos">
 				    <header class="docs-header">
 					    <h1 class="docs-heading">Demos</h1>
-					    <section class="docs-intro">
-						    <p>Below are a few demos of our upscaling technology.</p>
+					    <section class="docs-intro ">
+
+							<p><b>Virtual Background demo</b></p>
+							<p><a href="https://files.vectorly.io/demo/background/webrtc/index.html" target="_blank">Live Virtual Background Demo</a> </p>
+
+
+							<b>AI Upscaling demos</b>
 
 
 							<ul>
